# omnicursor

./: # Intelligence Layer — Current State and Options.md  .env.omninode.example  .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  OMNICLAUDE_SKILLS.md  OmniCursor_Architecture_Visual_Guide55.pages  OmniCursor_DoD_Rubric.md  OptionA-Prompts.md  README.md  compose.yaml  demoExplaining.md  explanation.md  hooks.md  pyproject.toml
.cursor/: README.md  hooks.json  mcp.json
.cursor-plugin/: plugin.json
.githooks/: pre-commit
cursor-omninode/: HOW_TO_RUN_IN_CURSOR.md  README.md
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEVELOPER.md  EXECUTION_PLAN.md  HANDOFF.md  INDEX.md  OMNICLAUDE_NODES_AND_CONTRACTS.md  OPTION_C_VS_MAIN.md  PIPELINE.md  QUICKSTART.md  README.md  SOW_vs_current_architecture.md  W4_INJECTION_EVIDENCE.md  demo_runbook.md  handoff.md
eval/: eval_routing.py  routing_labeled_prompts.csv  routing_results.csv
provisioning/: README.md  com.omnicursor.emit-daemon.plist  omnicursor-emit-daemon.service
scripts/: install-plugin.sh  run_bc_stack.sh  run_omnidash_bridge.sh  run_sidecar.sh  smoke_test.py  watch_outbox.py
skills/: README.md  adapter-stub.md  brainstorming.md  defense-in-depth.md  docs-reality-sync.md  execute-plan.md  hostile-reviewer.md  insights-to-plan.md  merge-planner.md  plan-review.md  plan-ticket.md  plan-to-tickets.md  pr-polish.md  pr-review.md  recap.md  systematic-debugging.md  using-git-worktrees.md  writing-plans.md
src/: README.md
tests/: README.md  conftest.py  test_agent_scoring.py  test_agents.py  test_canonical_event.py  test_ci_gates.py  test_compliance.py  test_daemon_ensure.py  test_drainer.py  test_emit_client.py  test_event_registry_tier.py  test_kill_switch.py  test_node_handlers.py  (+21 more)
(+235 files in other folders)
