[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicursor"
version = "0.1.0"
description = "Cursor-native MCP integration layer for OmniNode"
readme = "docs/QUICKSTART.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.0.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
omnicursor-server = "omnicursor.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

