[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicursor"
version = "0.1.0"
description = "Cursor-native rules, hooks, and skills layer for OmniNode"
readme = "docs/QUICKSTART.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.11.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
mcp = [
  "mcp>=1.26.0,<2.0.0",
]
ci = [
  "ruff",
  "mypy",
  "bandit",
  "detect-secrets",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omnicursor = ["nodes/*/contract.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src"]

[[tool.mypy.overrides]]
# yaml ships no stubs by default; mcp is an optional extra not installed in
# the default CI env. Neither gap is an omnicursor typing defect.
module = ["yaml", "yaml.*", "mcp.*"]
ignore_missing_imports = true

